@@ -54,6 +54,7 @@ public class ModCreativeTabs {
                     .title(Component.translatable("creative_tab.hbmsntm.bombs"))
                     .backgroundTexture(ResourceLocation.fromNamespaceAndPath(HBMsNTM.MODID, "textures/gui/nuke_tab.png"))
                     .displayItems((itemDisplayParameters, output) -> {
+                        output.accept(ModBlocks.NUKE_FATMAN);
                         output.accept(ModBlocks.MINE_AP);
                         output.accept(ModBlocks.MINE_SHRAP);
                         output.accept(ModBlocks.MINE_HE);
@@ -97,6 +98,9 @@ public class ModCreativeTabs {
                         output.accept(ModItems.BOTTLE_QUANTUM);
                         output.accept(ModItems.CAP_SPARKLE);
                         output.accept(ModItems.BOTTLE_SPARKLE);
+
+                        output.accept(ModItems.ALLOY_SWORD);
+                        output.accept(ModItems.SCHRAB_PICKAXE);
                     }).build());
 
     public static void register(IEventBus eventBus) {
