@@ -122,9 +122,8 @@ public class ModItems {
                     .stacksTo(1)
                     .attributes(ToolAbilityItem.createAttributes(Tiers.NETHERITE, 20F, -2.8F))
                     .rarity(Rarity.RARE))
-                    .addAbility(IWeaponAbility.RADIATION, 3)
+                    .addAbility(IWeaponAbility.RADIATION, 1)
                     .addAbility(IWeaponAbility.STUN, 3)
-                    .addAbility(IToolHarvestAbility.SILK, 1)
                     .addAbility(IToolAreaAbility.EXPLOSION, 2)
                     .addAbility(IToolAreaAbility.HAMMER, 2)
                     .addAbility(IToolAreaAbility.HAMMER_FLAT, 2)
